# porkchop

./: .gitignore  CLAUDE.md  README.md  docker-compose.dev.yml  docker-compose.yml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.devcontainer.yml
backend/: Dockerfile  main.py  pyproject.toml  schema.py
backend/data/: validation.db
backend/format/: backup.json  generate.schema.json  root_boolean.json  root_boolean_content.json
backend/models/: database.py
backend/prompts/: general_prompts.txt  hoge_prompt.txt  simple_prompt.txt  step_prompts.txt  test_prompt.txt  validation_prompt.txt
backend/prompts/artifacts_anonymity/: all.txt
backend/prompts/artifacts_reproducibility/: all.txt
backend/prompts/artifacts_validity/: all.txt
backend/prompts/pipeline_portability/: all.txt
backend/prompts/pipeline_usability/: all.txt
backend/prompts/pipeline_validity/: all.txt  task_alignment.txt
backend/routers/: files.py  logs.py  prompts.py  upload.py
backend/services/: converter.py  ollama_service.py  prompt_service.py  utils.py  validation_service.py
backend/tests/unit/services/: conftest.py  test_prompt_service.py
frontend/: .eslintrc.cjs  Dockerfile  index.html  nginx.conf  nginx.dev.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx  routeTree.gen.ts  utils.ts
frontend/src/components/: FileUpload.tsx  Layout.tsx  LogList.tsx  ValidationResult.tsx
frontend/src/hooks/: useBatchStatus.ts  useFileContent.ts  useLogList.ts  useMarkdownExport.ts  usePromptCategories.ts  useSeverityCounts.ts  useStatusColors.ts  useValidation.ts
frontend/src/pages/: LogPage.tsx  UploadPage.tsx
frontend/src/routes/: __root.tsx  index.tsx  log.tsx
frontend/src/services/: api.ts
frontend/src/types/: index.ts
ollama-stub/: Dockerfile  main.py  pyproject.toml
ollama-stub/responses/: error.json  pass.json  test.json
