[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "porkchop-backend"
version = "0.1.0"
description = "Backend for porkchop workflow validation system using Ollama LLM"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn==0.24.0",
    "sqlalchemy==2.0.23",
    "alembic==1.12.1",
    "pydantic==2.5.0",
    "python-multipart==0.0.6",
    "ollama==0.1.7",
    "python-dotenv==1.0.0",
    "aiofiles==23.2.1",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "black==23.11.0",
    "isort==5.12.0",
    "flake8==6.1.0",
]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 88

[tool.hatch.build.targets.wheel]
packages = ["."]