[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "porkchop-backend"
version = "0.1.0"
description = "Backend for porkchop workflow validation system using Ollama LLM"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.116.1",
    "uvicorn==0.35.0",
    "sqlalchemy==2.0.23",
    "alembic==1.12.1",
    "pydantic==2.5.0",
    "python-multipart==0.0.6",
    "ollama==0.1.7",
    "python-dotenv==1.0.0",
    "aiofiles==23.2.1",
]

[project.optional-dependencies]
dev = ["pytest==7.4.3", "pytest-asyncio==0.21.1", "ruff==0.12.9"]

[tool.ruff]
target-version = "py311"
line-length = 88
lint.select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
lint.ignore = [
    "E501", # line too long, handled by black
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.hatch.build.targets.wheel]
packages = ["."]
