[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "porkchop-ollama-stub"
version = "0.1.0"
description = "Ollama stub service for porkchop workflow validation system testing"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.116.1",
    "uvicorn==0.35.0",
]

[project.optional-dependencies]
dev = [
    "ruff==0.12.9",
]

[tool.ruff]
target-version = "py311"
line-length = 88
lint.select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
lint.ignore = [
    "E501", # line too long, handled by black
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.hatch.build.targets.wheel]
packages = ["."]